oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_13.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                   Graphic rendition test pattern:                              
                                                                                
                                                                                
vanilla                                bold                                     
                                                                                
     underline                              bold underline                      
                                                                                
blink                                  bold blink                               
                                                                                
     underline blink                        bold underline blink                
                                                                                
negative                               bold negative                            
                                                                                
     underline negative                     bold underline negative             
                                                                                
blink negative                         bold blink negative                      
                                                                                
     underline blink negative               bold underline blink negative       
                                                                                
                                                                                
                                                                                
                                                                                
Dark background. Push <RETURN>
