oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_01.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
*************************************************************************************************
*************************************************************************************************
*************************************************************************************************
                                                                                                 
This should be three identical lines of *'s completely filling                                   
the top of the screen without any empty lines between.                                           
(Test of WRAP AROUND mode setting.)                                                              
Push <RETURN>
