oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_04.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456 
                                                                                                 
  This is 97 column mode, light background.                                                      
   This is 97 column mode, light background.                                                     
    This is 97 column mode, light background.                                                    
     This is 97 column mode, light background.                                                   
      This is 97 column mode, light background.                                                  
       This is 97 column mode, light background.                                                 
        This is 97 column mode, light background.                                                
         This is 97 column mode, light background.                                               
          This is 97 column mode, light background.                                              
           This is 97 column mode, light background.                                             
            This is 97 column mode, light background.                                            
             This is 97 column mode, light background.                                           
              This is 97 column mode, light background.                                          
               This is 97 column mode, light background.                                         
                This is 97 column mode, light background.                                        
                 This is 97 column mode, light background.                                       
                  This is 97 column mode, light background.                                      
                   This is 97 column mode, light background.Push <RETURN>
