oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_07.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Push <RETURN>                                                                                    
Soft scroll down region [16..17] size 2 Line 38
