oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_10.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
Push <RETURN>                                                                                    
Jump scroll down region [1..33] size 33 Line 38                                                  
Jump scroll down region [1..33] size 33 Line 37                                                  
Jump scroll down region [1..33] size 33 Line 36                                                  
Jump scroll down region [1..33] size 33 Line 35                                                  
Jump scroll down region [1..33] size 33 Line 34                                                  
Jump scroll down region [1..33] size 33 Line 33                                                  
Jump scroll down region [1..33] size 33 Line 32                                                  
Jump scroll down region [1..33] size 33 Line 31                                                  
Jump scroll down region [1..33] size 33 Line 30                                                  
Jump scroll down region [1..33] size 33 Line 29                                                  
Jump scroll down region [1..33] size 33 Line 28                                                  
Jump scroll down region [1..33] size 33 Line 27                                                  
Jump scroll down region [1..33] size 33 Line 26                                                  
Jump scroll down region [1..33] size 33 Line 25                                                  
Jump scroll down region [1..33] size 33 Line 24                                                  
Jump scroll down region [1..33] size 33 Line 23                                                  
Jump scroll down region [1..33] size 33 Line 22                                                  
Jump scroll down region [1..33] size 33 Line 21                                                  
Jump scroll down region [1..33] size 33 Line 20                                                  
Jump scroll down region [1..33] size 33 Line 19                                                  
Jump scroll down region [1..33] size 33 Line 18                                                  
Jump scroll down region [1..33] size 33 Line 17                                                  
Jump scroll down region [1..33] size 33 Line 16                                                  
Jump scroll down region [1..33] size 33 Line 15                                                  
Jump scroll down region [1..33] size 33 Line 14                                                  
Jump scroll down region [1..33] size 33 Line 13                                                  
Jump scroll down region [1..33] size 33 Line 12                                                  
Jump scroll down region [1..33] size 33 Line 11                                                  
Jump scroll down region [1..33] size 33 Line 10                                                  
Jump scroll down region [1..33] size 33 Line 9                                                   
Jump scroll down region [1..33] size 33 Line 8                                                   
Jump scroll down region [1..33] size 33 Line 7
